--- a/AC 1 TecWeb/index.html
+++ b/AC 1 TecWeb/index.html
@@ -15,11 +15,11 @@
         <li><strong>Lista 1</strong></li>
         <ol start="1" type="I" >
             <li><strong>-TecWeb </strong></li>
-            <ol><a href="https://classroom.google.com/u/0/c/Mjg4MzY0MjI2NTBa">Clique aqui para acessar na página de TecWeb no Classroom</a> </a></ol>
+            <ol><a href="https://classroom.google.com/u/0/c/Mjg4MzY0MjI2NTBa">Clique aqui para acessar a página de TecWeb no Classroom</a> </a></ol>
             <li><strong>-DevOps </strong></li>
-            <ol><a href="https://classroom.google.com/u/0/c/Mjg4MzYyNTQ4NTJa">Clique aqui para acessar na página de DevOps no Classroom</a> </a></ol>
+            <ol><a href="https://classroom.google.com/u/0/c/Mjg4MzYyNTQ4NTJa">Clique aqui para acessar a página de DevOps no Classroom</a> </a></ol>
             <li><strong>-Engenharia</strong></li>
-            <ol><a href="https://classroom.google.com/u/0/c/Mjg4MzY0NjExNTFa">Clique aqui para acessar na página de Engenharia de Softare no Classroom</a> </a></ol>
+            <ol><a href="https://classroom.google.com/u/0/c/Mjg4MzY0NjExNTFa">Clique aqui para acessar a página de Engenharia de Softare no Classroom</a> </a></ol>
             <li><strong>-GitHub</strong></li>
             <ol><a href="https://github.com/agAlexandre/DevOpsAds">Clique aqui para acessar nosso Git</a></ol>
 
